[package]
name = "ticktock"
version = "0.8.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "Best effort constant framerate clock and fast timers"
license = "MIT"
repository = "https://github.com/mbr/ticktock-rs"
documentation = "http://docs.rs/ticktock"
edition = "2018"

[dependencies]
